app/assets/stylesheets/master.scss
@import "bootstrap";

body {
    background: image_url('round.png');
   /* Trebuchet-based sans serif stack */
    font-family: "Segoe UI", Candara, "Bitstream Vera Sans", "DejaVu Sans", "Bitstream Vera Sans", "Trebuchet MS", Verdana, "Verdana Ref", sans-serif;
}

h1, h2, h3, h4, h5, h6 {
    margin: 0;
    padding: 0;
}

.navbar {
    background: image_url('zig_zag_wool.png');
    box-shadow: 0 1px 3px #2a2a2a;
}

.navbar-inverse .navbar-brand {
    color: #8470FF;
    font-family: 'sinkin_sans600_semibold', sans-serif;
    font-size: 24px;
    letter-spacing: 6px;
}

.booyah-box {
    -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
    -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
    box-shadow: 1px 1px 2px 0 #d0d0d0;
    background: #fff;
    border: 1px solid #ccc;
    border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
    margin: 10px 0 15px 0;
    padding: 20px;
}

.pagination {
    margin: 10px 0 20px 0;
    font-family: 'sinkin_sans200_x_light', sans-serif;
    letter-spacing: 3px;
    justify-content: flex-start;
}

.pagination .previous_page {
    margin: 0 20px 0 0;
}

.pagination a {
    margin: 0 10px 0 10px;
}

